// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`treemapUtils build node deltas 1`] = `
Object {
  "attributes": Object {},
  "children": Array [],
  "deltas": Object {
    "theHeight": 33,
  },
  "depth": 0,
  "flat": false,
  "height": 100,
  "heightDelta": 33,
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "markingColor": null,
  "name": "Anode",
  "origin": undefined,
  "parent": null,
  "path": "/root/Anode",
  "visible": undefined,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 0,
}
`;

exports[`treemapUtils build node invertHeight 1`] = `
Object {
  "attributes": Object {},
  "children": Array [],
  "deltas": undefined,
  "depth": 0,
  "flat": false,
  "height": 1900,
  "heightDelta": 0,
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "markingColor": null,
  "name": "Anode",
  "origin": undefined,
  "parent": null,
  "path": "/root/Anode",
  "visible": undefined,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 0,
}
`;

exports[`treemapUtils build node is leaf 1`] = `
Object {
  "attributes": Object {},
  "children": Array [],
  "deltas": undefined,
  "depth": 0,
  "flat": false,
  "height": 100,
  "heightDelta": 0,
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "markingColor": null,
  "name": "Anode",
  "origin": undefined,
  "parent": null,
  "path": "/root/Anode",
  "visible": undefined,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 0,
}
`;

exports[`treemapUtils build node minimal 1`] = `
Object {
  "attributes": Object {},
  "children": Array [],
  "deltas": undefined,
  "depth": 0,
  "flat": false,
  "height": 100,
  "heightDelta": 0,
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "markingColor": null,
  "name": "Anode",
  "origin": undefined,
  "parent": null,
  "path": "/root/Anode",
  "visible": undefined,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 0,
}
`;

exports[`treemapUtils build node should set lowest possible height caused by other visible edge pairs 1`] = `
Object {
  "attributes": Object {},
  "children": Array [],
  "deltas": undefined,
  "depth": 0,
  "flat": true,
  "height": 1,
  "heightDelta": 0,
  "isLeaf": true,
  "length": 400,
  "link": undefined,
  "markingColor": null,
  "name": "Anode",
  "origin": undefined,
  "parent": null,
  "path": "/root/Anode",
  "visible": undefined,
  "width": 400,
  "x0": 0,
  "y0": 0,
  "z0": 0,
}
`;
